# inutil

./: .env.example  .gitignore  .gitmodules  CLAUDE.md  README.md  devenv.nix  devenv.yaml
.agentsroom/: project.json
docs/: README.md
docs/contribution/: 01-philosophy.md  02-system-map.md
docs/contribution/architecture/: 10-schema.md  11-interop-patch.md  12-marshal.md  13-hook-engine.md  14-hook-ergonomics.md  15-mod-host.md  16-metadata.md  17-reach-faces.md  18-repl.md  19-loaders.md  20-testing.md
docs/guide/: 00-orient.md  01-setup-first-mod.md  02-hooking.md  03-natural-typing.md  04-escape-hatches.md  06-repl.md  07-full-leverage.md  08-concurrency.md  09-config.md
docs/reference/: authoring-modes.md  deferred-zero-il2cpp.md  limits.md  natural-dx.md  packaging.md  roadmap.md
managed/refstubs/: README.md
managed/refstubs/Il2Cppmscorlib/: Il2Cppmscorlib.csproj  Stubs.cs
managed/refstubs/UnityEngine.CoreModule/: Stubs.cs  UnityEngine.CoreModule.csproj
managed/src/Inutil.BepInEx/: BepInExPlugin.cs  Inutil.BepInEx.csproj
managed/src/Inutil.BepInEx.Patcher/: InteropPatcher.cs  Inutil.BepInEx.Patcher.csproj
managed/src/Inutil.InteropPatch/: ArrayRewriter.cs  CecilMemberRef.cs  CecilProjection.cs  CecilTypeRef.cs  ContainerFamily.cs  ContainerFieldRewriter.cs  ContainerFlip.cs  ContainerReturnRewriter.cs  DelegateFamily.cs  GameLayout.cs  Inutil.InteropPatch.csproj  NullableFamily.cs  NullableFieldRewriter.cs  NullableReturnRewriter.cs  ParamFamily.cs  ParamFlip.cs  ParamFlipResolver.cs  ParamRewriter.cs  PatchDirectory.cs  ReturnTail.cs  TaskFamily.cs  TaskProxyRewriter.cs  WireMap.cs  (+2 more)
managed/src/Inutil.InteropPatch.Cli/: Inutil.InteropPatch.Cli.csproj  Program.cs
managed/src/Inutil.InteropPatch.Tests/: CecilProjectionTests.cs  FrameworkAssemblyTests.cs  GameLocatorTests.cs  Inutil.InteropPatch.Tests.csproj  NonVirtualGenericTaskFlipTests.cs  Program.cs  WireAttributeTests.cs
managed/test/: README.md
mods/mcp-repl/: McpReplCoremod.cs  README.md
native/: CMakeLists.txt  README.md
native/cmake/: toolchain-mingw-w64.cmake
native/core/: generic_thunk_post.S  interceptor.c  interceptor.h
native/tests/: guard_managed_smoke.c  guard_smoke.c
tools/: README.md  pack.sh
tools/wine/: README.md  activate-license.sh  build-toygame.sh  env.sh  guard-smoke.sh  prepare-prefix.sh  setup-bepinex.sh  setup-melon.sh  setup-unity.sh  trigger_shim.c  validate.sh  vswhere_shim.c
(+123 files in other folders)
